--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@ url=https://github.com/CoreyBehrends/chef-kibana.git
 [submodule "yum-mysql-community"]
 	path = yum-mysql-community
 	url = https://github.com/opscode-cookbooks/yum-mysql-community.git
+[submodule "smf"]
+	path = smf
+	url = https://github.com/livinginthepast/smf
